--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,10 @@ Thumbs.db
 # ===============================
 # Logs
 # ===============================
-logs/
-*.log
+logs/*.log
+logs/**/*.log
+logs/**/*.json
+logs/**/*.csv
 
 # ===============================
 # Data files (ETL outputs)
@@ -36,9 +38,10 @@ logs/
 data/*.csv
 data/*.parquet
 data/*.json
+data/**/*.csv
 
 # 保留示例数据（如果你有）
-!data/sample_*.csv
+!data/sample/**/*.csv
 
 # ===============================
 # Reports (DQ reports)
